<resources>
    <string name="app_name">QueueDroid</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9982327151344679/8944869745</string>
    <string name="adMobTestDeviceS5" translatable="false">F0E0DF548AD32B9C9DF78977B9079AD2</string>
    <string name="adMobTestDeviceS7" translatable="false">3795279CABB4FAC75E5F23A086CC9C9F</string>

    <string name="facebook_app_id" translatable="false">1616015895382966</string>

    <string name="cd_thumbnail" translatable="false">thumbnail</string>

    <string name="activity_main_text_game_mode">GAME MODE:</string>
    <string name="activity_main_text_game_mode_points">POINTS</string>
    <string name="activity_main_text_game_mode_time">TIME</string>

    <string name="activity_main_button_play">PLAY</string>
    <string name="activity_main_button_end_game">END GAME</string>
    <string name="activity_main_button_share">SHARE</string>
    <string name="activity_main_button_next_turn">NEXT TURN</string>
    <string name="activity_main_button_new_game">NEW GAME</string>
    <string name="activity_main_button_play_again">REVENGE</string>
    <string name="activity_main_button_settings">SETTINGS</string>

    <string name="activity_main_start_too_few_players_error_message">At least 2 players are needed to start a game.</string>
    <string name="activity_main_start_wrong_player_on_list_error_message">There\'s a player with empty name. Please fix that.</string>

    <string name="view_player_chooser_name_hint">Player\'s name&#8230;</string>
    <string name="view_player_chooser_button_add_player">ADD PLAYER</string>

    <string name="view_keyboard_points_collected">Points collected</string>
    <string name="view_keyboard_char_backspace" translatable="false">⌫</string>
    <string name="view_keyboard_too_long_input_message">Not allowed number.</string>

    <string name="checkbox_alert_dialog_title">Are you sure?</string>
    <string name="checkbox_alert_dialog_message">In order to assign points to player, you have to input points first.\nDo you want to assign 0 points to current player?</string>
    <string name="checkbox_alert_dialog_do_not_show_again">Do not show again.</string>

    <string name="activity_settings_pref_category_general">General</string>
    <string name="activity_settings_pref_keep_screen_on">Keep screen on</string>
    <string name="activity_settings_pref_keep_screen_on_summary_on">Screen will be kept on during game</string>
    <string name="activity_settings_pref_keep_screen_on_summary_off">Screen won\'t be kept on during game</string>

    <string name="activity_settings_pref_category_accounts">Accounts</string>
    <string name="activity_settings_pref_use_facebook">Use Facebook</string>
    <string name="activity_settings_pref_use_facebook_summary_on">Application will use Facebook</string>
    <string name="activity_settings_pref_use_facebook_summary_off">Application won\'t use Facebook</string>
    <string name="activity_settings_pref_use_contacts">Use Contacts</string>
    <string name="activity_settings_pref_use_contacts_summary_on">Application will use Contacts</string>
    <string name="activity_settings_pref_use_contacts_summary_off">Application won\'t use Contacts</string>

    <string name="activity_settings_pref_category_keyboard">Keyboard</string>
    <string name="activity_settings_pref_use_keyboard">Use in-app keyboard</string>
    <string name="activity_settings_pref_use_keyboard_summary_on">In-app keyboard will be used</string>
    <string name="activity_settings_pref_use_keyboard_summary_off">In-app keyboard won\'t be used</string>
    <string name="activity_settings_pref_keyboard_columns">Keyboard columns</string>
    <string name="view_keyboard_input_points_toast">Input points first</string>
    <string name="activity_main_on_back_pressed">Press back once more to quit.</string>
    <string name="keyboard_current_player_points">Current player points:</string>
    <string name="cd_row_facebook_thumbnail">Facebook thumbnail</string>
</resources>
